# ami-engine

./: .gitignore  01_STATE_SPACE_AND_CONSTRAINTS.txt  02_DECISION_ENGINE_ARCHITECTURE.txt  02_MATHEMATICAL_MODEL.txt  02_MORAL_DECISION_ENGINE_SPEC.txt  04_CORE_ENGINE_DEVELOPMENT.txt  05_ETHICAL_TEST_FRAMEWORK.txt  AUDITABILITY.md  CHANGELOG.md  CONTRIBUTING.md  CSV_EXPORT_FINAL_REPORT.md  CSV_EXPORT_TEST_REPORT.md  LICENSE  MANIFEST.in  PACKAGING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_STRUCTURE.md  RUN_TESTS.md  SAFETY_LIMITATIONS.md  SECURITY.md  USAGE_POLICY.md  config.py  demo_traces.jsonl  engine.py  optimization_history.jsonl  pyproject.toml  requirements-dashboard.txt  run_all_tests.py  run_model_test.bat  run_tests.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage_question.md
.github/workflows/: ci.yml  live_test.yml
ami_engine/: __init__.py  api.py  cli.py  config.py  engine.py  trace_types.py
ami_engine/config_profiles/: __init__.py
ami_engine/core/: __init__.py
config_profiles/: __init__.py  base.py  chaos_tuning.py  clamp_test.py  high_critical.py  production_safe.py  scenario_test.py
core/: __init__.py  action_generator.py  action_selector.py  confidence.py  constraint_validator.py  fail_safe.py  moral_evaluator.py  soft_clamp.py  soft_override.py  state_encoder.py  temporal_drift.py  trace_collector.py  trace_logger.py  uncertainty.py
docs/: 00_ARCHITECTURE_STATUS.txt  05_B3_CONFIDENCE_SPEC.txt  06_PHASE_44_COGNITIVE_UNCERTAINTY_SPEC.txt  07_PHASE_45_SOFT_OVERRIDE_AND_SAFETY_ENVELOPE_SPEC.txt  08_PHASE_46_ADAPTIVE_SAFETY_ENVELOPE_SPEC.txt  09_PHASE_461_ADAPTIVE_SOFT_CLAMP_SPEC.txt  10_PHASE_5_TEMPORAL_DRIFT_SPEC.txt  11_PHASE_51_SELF_REGULATION_SPEC.txt  12_PHASE_47_TRACE_AND_OBSERVABILITY_SPEC.txt  13_PHASE_472_DASHBOARD_SPEC.txt  14_DASHBOARD_NASIL_OKUNUR.txt  15_PHASE_6_OFFLINE_LEARNING_SPEC.txt  16_PHASE_61_LEARNING_VISUALIZATION_SPEC.txt  17_PHASE_62_SCENARIO_GENERATOR_SPEC.txt  18_DASHBOARD_DEMO_VS_OPTIMIZATION.txt  19_SYSTEM_CHECKUP_NOTLARI.txt  20_CHAOS_AND_CONFIG_PROFILES.txt  21_PHASE_63_64_7_ROADMAP.txt  22_KULLANICI_SECIMLERI_VE_SONUCLAR.txt  23_TEK_TEST_RASGELE_SENARYOLAR.txt  24_VERI_INCELEME_SONUC.txt  25_TABLO_COCUK_ANLATIMI.txt  26_AKADEMIK_TAK DIM_MEKTUBU.pdf.txt  26_AKADEMIK_TAKDIM_MEKTUBU.txt  27_REALTIME_PROOF_STATUS.txt  28_CANLI_VERI_VE_PILOT.md  ACADEMIC_PRESENTATION.md  CORPORATE_PITCH.md  EMAIL_TEMPLATES.md  GOLDEN_EXAMPLE.md  README.md  RESEARCH_BRIEF.md
docs/development/: PACKAGING_GUIDE.md  PYPI_RELEASE_GUIDE.md  RELEASE_COMMANDS.txt  VERSIONING.md
docs/releases/: RELEASE_NOTES_v1.0.0.md
docs/reports/: CLEANUP_ANALYSIS_REPORT.txt  CLEANUP_SAFE_PROMPT.txt
docs/specs/: 00_BOOTSTRAP.txt  00_ETHICAL_CONTROL_THEORY.txt  01_VISION_AND_PHILOSOPHY.txt  03_ENGINE_IMPLEMENTATION_PROMPT.txt  03_SYSTEM_ARCHITECTURE.txt  04_QUALITY_AND_PHASE4_SPEC.txt  06_LONG_TERM_EVOLUTION.txt
examples/: README.md  __init__.py  hello_world.py  replay_example.py  trace_collection.py
learning/: __init__.py  feedback_metrics.py  loss.py  offline_loop.py  policy_optimizer.py  run_optimization_loop.py  safety_gate.py
simulation/: __init__.py  scenario_generator.py
tests/: __init__.py  inspect_dashboard_data.py  test_dashboard_scenarios.py  test_scenarios.py
tests/adversarial/: __init__.py  base.py  extreme_compassion.py  harm_explosion.py  justice_conflict.py  moral_drift_simulation.py
tests/chaos/: __init__.py  grid.py  invariants.py  runner.py
tests/learning/: __init__.py  test_learning.py
tests/monte_carlo/: __init__.py  generator.py  report.py  run_example.py  runner.py
tests/simulation/: __init__.py  test_scenario_generator.py
tests/soft_clamp/: __init__.py  test_soft_clamp.py
tests/soft_override/: __init__.py  test_soft_override.py
tests/temporal_drift/: __init__.py  test_temporal_drift.py
tests/trace_collector/: __init__.py  test_trace_collector.py
tests/uncertainty/: __init__.py  test_uncertainty.py
tools/: csv_export.py  realtime_10min.py  realtime_ci.py  realtime_demos.py  realtime_pilot.py  realtime_smoke.py  run_offline_learning.py  tune_thresholds.py
visualization/: __init__.py  dashboard.py  i18n.py
visualization/plots/: __init__.py  action_drift.py  chaos_scatter.py  cus_timeline.py  cus_vs_latency.py  decision_boundary.py  drift_panel.py  latency_timeline.py  learning_evolution.py  level_timeline.py  soft_clamp_map.py
